<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/register_header_shadow"
        android:gravity="start|center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/register_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:hint="@string/back_button"
            android:textColorHint="#37474F"
            app:icon="@drawable/ic_header_back"
            app:iconGravity="textStart"
            app:iconTint="@color/bg_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/register"
            android:textColor="@color/bg_color" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RegisterStyle"
        android:layout_margin="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_username"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_email"
            app:layout_constraintTop_toBottomOf="@id/register_username"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_phone"
            app:layout_constraintTop_toBottomOf="@id/register_email"
            />
        <RadioGroup
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:gravity="center"
            android:id="@+id/register_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_phone">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/spinner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_radio_group">
            <Spinner
                android:id="@+id/spinner_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/blood_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
            <Spinner
                android:id="@+id/spinner_reshus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/reshus"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_pass"
            app:layout_constraintTop_toBottomOf="@id/spinner_container"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:hint="@string/retype_pass"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_retype_pass"
            app:layout_constraintTop_toBottomOf="@id/register_pass"
            />

        <RadioGroup
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:gravity="center"
            android:id="@+id/register_radio_group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_retype_pass">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/personal"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/organizatio"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/register_spinner_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/job"
            app:layout_constraintTop_toBottomOf="@id/register_radio_group_2"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/home_address"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_home_address"
            app:layout_constraintTop_toBottomOf="@id/register_spinner_job"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/default_location"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400"
            android:id="@+id/register_def_location"
            android:drawableEnd="@drawable/ic_blood_needed_location"
            app:layout_constraintTop_toBottomOf="@id/register_home_address"
            />
        <CheckBox
            android:id="@+id/register_agree_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_def_location"
            android:text="@string/agree_with_terms_and_conditios"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:id="@+id/register_reg_button"
            android:layout_height="52dp"
            android:text="@string/register_button"
            android:textColor="#0277BD"
            app:layout_constraintTop_toBottomOf="@id/register_agree_term"
            app:strokeColor="@color/light_blue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>