<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.almost.AlmostThereActivity"
    android:padding="32dp"
    android:background="@color/light_blue">

    <TextView
        android:textColor="@color/bg_color"
        android:gravity="center"
        android:id="@+id/almost_header"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        app:layout_constraintBottom_toTopOf="@+id/almost_verify_button"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/almost_header"
        android:id="@+id/almost_sub_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_subtitle_1"
        android:textColor="@color/bg_color"

    />
    <TextView
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/almost_sub_1"
        android:id="@+id/almost_sub_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_subtitle_2"
        android:textColor="@color/bg_color"
        />
    <TextView
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/almost_sub_2"
        android:id="@+id/almost_sub_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_subtitle_3"
        android:textColor="@color/bg_color"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/almost_verify_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/verify"
        app:strokeColor="@color/bg_color"
        android:textColor="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>